<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createGroup.CreateGroupFragment">

    <ImageView
        android:id="@+id/fragment_create_group_titleImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/textGray"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/fragment_create_group_setTitleImageWithGallery"
        android:layout_width="@dimen/img_small"
        android:layout_height="@dimen/img_small"
        android:padding="@dimen/padding_s"
        android:src="@drawable/round_add_photo_alternate_white_24"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/fragment_create_group_titleImage"
        app:layout_constraintRight_toRightOf="@id/fragment_create_group_titleImage"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <ImageButton
        android:id="@+id/fragment_create_group_setTitleImageWithCamera"
        android:layout_width="@dimen/img_small"
        android:layout_height="@dimen/img_small"
        android:padding="@dimen/padding_s"
        android:src="@drawable/round_add_a_photo_white_24"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/fragment_create_group_titleImage"
        app:layout_constraintRight_toLeftOf="@id/fragment_create_group_setTitleImageWithGallery"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_create_group_nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_group_name"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_create_group_titleImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_create_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_create_group_descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_group_description"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_create_group_nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_create_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>