<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_create_group_save"
        android:title="@string/save"
        app:showAsAction="always|collapseActionView"/>

</menu>