...
                android:id="@+id/activity_main_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <FrameLayout
                android:id="@+id/activity_main_fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"></FrameLayout>

        </LinearLayout>

...
